...
        style={styles.layout}
        keyboardAvoiding={false}
      >
        <Pressable
          style={styles.fill}
          onPress={Keyboard.dismiss}
          testID="add-meal-text-screen"
          accessible={false}
        >
          {flowHeader}
          <KeyboardAwareScrollView
            style={styles.scroller}
            contentContainerStyle={[
...
