appId: com.lkurczab.fitaly
---
- runFlow: ../login.yaml
- openLink: fitaly://e2e/seed?fixture=user-with-saved-meals
- assertVisible:
    id: e2e-ready-fixture-user-with-saved-meals
- tapOn:
    id: tab-add-meal
- assertVisible:
    id: meal-add-option-saved
- tapOn:
    id: meal-add-option-saved
- assertVisible:
    id: select-saved-meal-screen
- assertVisible:
    id: saved-meal-add-e2e-saved-meal-1
- tapOn:
    id: saved-meal-add-e2e-saved-meal-1
- assertVisible:
    id: review-meal-screen
- tapOn:
    id: review-meal-save-button
- assertVisible:
    id: home-screen
- assertVisible:
    id: home-today-meal-row-0
- scrollUntilVisible:
    element:
      id: home-view-history-button
    direction: DOWN
- tapOn:
    id: home-view-history-button
- assertVisible:
    id: history-list-screen
- assertVisible:
    id: history-meal-row-0
